--- a/basics.ipynb
+++ b/basics.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "926c3986",
    "metadata": {},
    "outputs": [
@@ -40,8 +40,7 @@
     "def chai(n):\n",
     "    print(n)\n",
     "chai(4)\n",
-    "chai(\"Hoonigan\")\n",
-    "chai(\"Hoonigan\")"
+    "chai(\"Hoonigan\")\n"
    ]
   },
   {
