Day 1 of learning python

--- a/basics.ipynb
+++ b/basics.ipynb
@@ -59,6 +59,114 @@
     "immutables means if a memory refrence is created for a immutable object now the value cannot be altered an another memory refrence is generated and variable point to that refrence.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82661f5a",
+   "metadata": {},
+   "source": [
+    "# Object Types / Data Types\n",
+    "\n",
+    "- Number : 1234, 3.1415, 3+4j, 0b111, Decimal(), Fraction()\n",
+    "- String : 'spam', \"Bob's\", b'a\\x01c', u'sp\\xc4m'\n",
+    "- List : [1, [2, 'three'], 4.5], list(range(10))\n",
+    "- Tuple : (1, 'spam', 4, 'U'), tuple('spam'), namedtuple\n",
+    "- Dictionary : {'food': 'spam', 'taste': 'yum'}, dict(hours=10)\n",
+    "\n",
+    "- Set : set('abc'), {'a', 'b', 'c'}\n",
+    "\n",
+    "- File : open('eggs.txt'), open(r'C:\\ham.bin', 'wb')\n",
+    "\n",
+    "- Boolean : True, False\n",
+    "- None : None\n",
+    "- Funtions, modules, classes\n",
+    "\n",
+    "- Advance: Decorators, Generators, Iterators, MetaProgramming"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2822b43",
+   "metadata": {},
+   "source": [
+    "### Interning in Python\n",
+    "\n",
+    "- Variables are bound to **references**, not data types.\n",
+    "- For performance, Python **interns** small integers and short strings.\n",
+    "- Interning means reusing objects instead of creating new ones for the same value.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "916c62b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# String indexing and slicing\n",
+    "username = \"Hoonigan\"\n",
+    "\n",
+    "len(username)       # Get length\n",
+    "username[0]         # First character\n",
+    "username[-1]        # Last character\n",
+    "username[0:3]       # Slicing from index 0 to 2\n",
+    "\n",
+    "# Strings are immutable\n",
+    "# username[0] = 'A'  # ❌ This would raise an error\n",
+    "\n",
+    "# To change the first character:\n",
+    "username = 'A' + username[1:]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5053c2dc",
+   "metadata": {},
+   "source": [
+    "### Mutable Behavior with Lists\n",
+    "\n",
+    "```python\n",
+    "mylist = [2, 3, 4, 5]\n",
+    "mylisttwo = mylist\n",
+    "\n",
+    "mylist[0] = 54\n",
+    "print(mylisttwo)  # [54, 3, 4, 5]\n",
+    "\n",
+    "mylist = [57, 3, 4, 5]\n",
+    "print(mylisttwo)  # [54, 3, 4, 5]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "004df7b8",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "a = [1, 2, 3]\n",
+    "b = a\n",
+    "print(b == a)  # True (values equal)\n",
+    "print(b is a)  # True (same object)\n",
+    "\n",
+    "b = [1, 2, 3]\n",
+    "print(b == a)  # True\n",
+    "print(b is a)  # False (different objects)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a860206",
+   "metadata": {},
+   "source": [
+    "mylist = [2, 3, 4, 5]\n",
+    "\n",
+    "# Shallow copy\n",
+    "mylisttwo = mylist[:]\n",
+    "\n",
+    "# Deep copy\n",
+    "import copy\n",
+    "mylisttwo = copy.deepcopy(mylist)"
+   ]
   }
  ],
  "metadata": {
