Day 2 half learning

--- a/basics.ipynb
+++ b/basics.ipynb
@@ -167,6 +167,83 @@
     "import copy\n",
     "mylisttwo = copy.deepcopy(mylist)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bbbd6fa",
+   "metadata": {},
+   "source": [
+    ">>> import math\n",
+    ">>> math.floor(3.5) \n",
+    "Here the floor function returns the largest integer less than or equal to x\n",
+    "it's like you are on a same floor untill you climb the last stair to go to the next floor\n",
+    "3\n",
+    ">>> math.floor(3.9)\n",
+    "3\n",
+    ">>> math.floor(-3.9)\n",
+    "-4\n",
+    ">>> math.floor(-4.5)\n",
+    "-5\n",
+    ">>> math.trunc(3.5)\n",
+    "Here the trunc function returns the integer part of x or you can say it returns the integer nearest to 0\n",
+    "3\n",
+    ">>> math.trunc(3.9)\n",
+    "3\n",
+    ">>> math.trunc(-3.9)\n",
+    "-3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7f2344d",
+   "metadata": {},
+   "source": [
+    "We can also handle imaginary numbers in python\n",
+    ">>> 2 + 1j\n",
+    "(2+1j)\n",
+    ">>> 2 + 1j * 3\n",
+    "(2+3j)\n",
+    ">>> (2 + 1j) * 3\n",
+    "(6+3j)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07d9a0e2",
+   "metadata": {},
+   "source": [
+    "We can also handle different bases in python\n",
+    "- number such as (0o) for octal\n",
+    "- number such as (0x) for hexadecimal\n",
+    "- number such as (0b) for binary\n",
+    ">>> 0o10    \n",
+    "8\n",
+    ">>> 0x10\n",
+    "16\n",
+    ">>> 0b10    \n",
+    "2\n",
+    "\n",
+    ">>> oct(100)\n",
+    "'0o144'\n",
+    ">>> hex(100)\n",
+    "'0x64'\n",
+    ">>> bin(100)\n",
+    "'0b1100100'\n",
+    "\n",
+    "We can also calculate through integer function\n",
+    ">>> int('100',2)\n",
+    "4\n",
+    ">>> int('100',8)\n",
+    "64\n",
+    ">>> int('100',16)\n",
+    "256\n",
+    "\n",
+    "We can also operate bitwise operations in python\n",
+    "\n",
+    ">>> x = 1\n",
+    ">>> x << 2  # here we are shifting the bits to left by 2\n",
+    "4 ===> (0001 << 2 = 0100)"
+   ]
   }
  ],
  "metadata": {
