day 3 till dictionary

--- a/basics.ipynb
+++ b/basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f606737d",
    "metadata": {},
    "outputs": [
@@ -243,6 +243,63 @@
     ">>> x = 1\n",
     ">>> x << 2  # here we are shifting the bits to left by 2\n",
     "4 ===> (0001 << 2 = 0100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8cee7b6d",
+   "metadata": {},
+   "source": [
+    ">>> 0.1 + 0.1 + 0.1\n",
+    "0.30000000000000004\n",
+    ">>> 0.1 + 0.1 + 0.4\n",
+    "0.6000000000000001\n",
+    ">>> 0.1 + 0.1 + 0.4 - 0.6\n",
+    "1.1102230246251565e-16  # This should not be an answer \n",
+    ">>> from decimal import Decimal\n",
+    ">>> Decimal(0.1) + Decimal(0.1) + Decimal(0.4) - Decimal(0.6)\n",
+    "Decimal('0.0')\n",
+    ">>> Decimal(0.1) + Decimal(0.1) + Decimal(0.4)\n",
+    "Decimal('0.0')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "783e814a",
+   "metadata": {},
+   "source": [
+    "Let's talk little about sets\n",
+    ">>> setone = {1, 2, 3, 4}\n",
+    ">>> setone & {1, 7}\n",
+    "& is used for intersection\n",
+    "{1}\n",
+    ">>> setone | {1, 7}\n",
+    "| is used for union\n",
+    "{1, 2, 3, 4, 7}\n",
+    "\n",
+    ">>> setone - {1, 2, 3, 4}\n",
+    "set() Here we will never get an empty set and this is defining type for set\n",
+    ">\n",
+    "\n",
+    ">> type ({})\n",
+    "<class 'dict'>\n",
+    ">>> type (())\n",
+    "<class 'tuple'>\n",
+    ">>> type (set())    \n",
+    "<class 'set'>\n",
+    ">>> type(True)\n",
+    "<class 'bool'>\n",
+    ">>> type(True)\n",
+    "<class 'bool'>\n",
+    "\n",
+    "\n",
+    ">>> True == 1\n",
+    "True\n",
+    ">>> False == 0\n",
+    "True\n",
+    ">>> True + 1\n",
+    "2\n",
+    "\n"
    ]
   }
  ],
