--- a/basics.ipynb
+++ b/basics.ipynb
@@ -301,6 +301,163 @@
     "2\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c01f980",
+   "metadata": {},
+   "source": [
+    "Some Slicing examples:\n",
+    ">>> lis = [0, 1, 2, 3, 4]\n",
+    ">>> lis[0:2]\n",
+    "[0, 1]\n",
+    ">>> lis[1:2]\n",
+    "[1]\n",
+    ">>> lis[1:]\n",
+    "[1, 2, 3, 4]\n",
+    ">>> lis[:]\n",
+    "[0, 1, 2, 3, 4]\n",
+    ">>> lis[:-1]\n",
+    "[0, 1, 2, 3]\n",
+    ">>> lis[-2:-1]\n",
+    "[3]\n",
+    ">>> lis[-2:-3]\n",
+    "[]\n",
+    ">>> lis[-2:-4]\n",
+    "[]\n",
+    ">>> lis[-1:-4]\n",
+    "[]\n",
+    ">>> lis\n",
+    "[0, 1, 2, 3, 4]\n",
+    ">>> lis[-1:4]\n",
+    "[]\n",
+    ">>> lis[1:4]\n",
+    "[1, 2, 3]\n",
+    ">>> lis[1:-4]\n",
+    "[]\n",
+    ">>> lis[:-4]\n",
+    "[0]\n",
+    ">>> lis[:-2]\n",
+    "[0, 1, 2]\n",
+    ">>> lis \n",
+    "[0, 1, 2, 3, 4]\n",
+    ">>> lis = [0, 1, 2, 3, 4, 5, 6, 7]\n",
+    ">>> lis[:-2]\n",
+    "[0, 1, 2, 3, 4, 5]\n",
+    ">>> lis[:1-2]\n",
+    "[0, 1, 2, 3, 4, 5, 6]\n",
+    ">>> lis[1:-2]\n",
+    "[1, 2, 3, 4, 5]\n",
+    ">>> lis[-1:2]\n",
+    "[]\n",
+    ">>> lis[-4:2]\n",
+    "[]\n",
+    ">>> lis[4:2]\n",
+    "[]\n",
+    ">>> lis[4:-2]\n",
+    "[4, 5]\n",
+    "\n",
+    "\n",
+    "We can also use slicing in strings\n",
+    ">>> str = \"Hello World\"\n",
+    ">>> str[0:5]\n",
+    "'Hello'\n",
+    ">>> str[0:2]\n",
+    "'He'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cf96b26",
+   "metadata": {},
+   "source": [
+    "List basics in Python:\n",
+    "\n",
+    "- Accessing elements\n",
+    "\n",
+    ">>> Names = [\"Radha\", \"Shyama\", \"Kishori\", \"Shriji\", \"Ladliju\"]\n",
+    ">>> print(Names)\n",
+    "['Radha', 'Shyama', 'Kishori', 'Shriji', 'Ladliju']\n",
+    ">>> Names[0:3]\n",
+    "['Radha', 'Shyama', 'Kishori']\n",
+    ">>> Names[0]\n",
+    "'Radha'\n",
+    ">>> Names[0] = \"Radhavallabh\"\n",
+    ">>> Names[0]\n",
+    "'Radhavallabh'\n",
+    ">>> print(Names)\n",
+    "['Radhavallabh', 'Shyama', 'Kishori', 'Shriji', 'Ladliju']\n",
+    "\n",
+    "# Slicing in list\n",
+    "\n",
+    ">>> Names[0:1]\n",
+    "['Radhavallabh']\n",
+    ">>> Names[0:1] = \"Harivansh\"\n",
+    ">>> print(Names)\n",
+    "['H', 'a', 'r', 'i', 'v', 'a', 'n', 's', 'h', 'Shyama', 'Kishori', 'Shriji', 'Ladliju']\n",
+    "\n",
+    "# To fix this issue (it assumes each character of String as list/array) we will define String as an single array/list element\n",
+    "\n",
+    ">>> Names[0:1] = [\"Harivansh\"]\n",
+    ">>> print(Names)\n",
+    "['Harivansh', 'a', 'r', 'i', 'v', 'a', 'n', 's', 'h', 'Shyama', 'Kishori', 'Shriji', 'Ladliju']\n",
+    ">>> Names = [\"Radha\", \"Shyama\", \"Kishori\", \"Shriji\", \"Ladliju\"]\n",
+    ">>> Names[0:1] = [\"Harivansh\"]\n",
+    ">>> print(Names)\n",
+    "['Harivansh', 'Shyama', 'Kishori', 'Shriji', 'Ladliju']\n",
+    ">>> Names[0:-1] = [\"Harivansh\"]\n",
+    ">>> print(Names)\n",
+    "['Harivansh', 'Ladliju']\n",
+    "\n",
+    "# Here are some of the functions that we can use for lists in Python\n",
+    "\n",
+    ">>> Names_keep = Names.copy()\n",
+    ">>>> print(Names_keep)\n",
+    "['Harivansh', 'Ladliju']\n",
+    ">>> print(Names)\n",
+    "['Harivansh', 'Ladliju']\n",
+    ">>> Names = ['Radhavallabh', 'Shyama', 'Kishori', 'Shriji', 'Ladliju']\n",
+    ">>> Names\n",
+    "['Radhavallabh', 'Shyama', 'Kishori', 'Shriji', 'Ladliju']\n",
+    ">>> print(Names_keep)\n",
+    "['Harivansh', 'Ladliju']\n",
+    "\n",
+    "\n",
+    "# For loop in list:\n",
+    "\n",
+    "\n",
+    ">>> for name in Names:\n",
+    "...     print(name)\n",
+    "... \n",
+    "Radhavallabh\n",
+    "Shyama\n",
+    "Kishori\n",
+    "Shriji\n",
+    "Ladliju\n",
+    ">>> for name in Names:\n",
+    "...     print(name, end = \"@\")\n",
+    "... \n",
+    "Radhavallabh@Shyama@Kishori@Shriji@Ladliju@>>> # We can put whatever we want to put at that @ mark's palce\n",
+    ">>> if \"Radha\" in Names:\n",
+    "...     print(\"Shri Radhe\")\n",
+    "... \n",
+    "\n",
+    ">>> if \"Radha\" in Names:\n",
+    "...     print(\"Shri Radhe\")\n",
+    "... else:\n",
+    "...         print(\"i do not have that\")\n",
+    "... \n",
+    "i do not have that\n",
+    "\n",
+    "# .append() function in list\n",
+    ">>> Names.append(\"Radha\")\n",
+    ">>> if \"Radha\" in Names:\n",
+    "...     print(\"Shri Radhe\")\n",
+    "... else:\n",
+    "...         print(\"i do not have that\")\n",
+    "... \n",
+    "Shri Radhe\n"
+   ]
   }
  ],
  "metadata": {
