Add initial content to conditionals notebook

--- a/basics.ipynb
+++ b/basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f606737d",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "926c3986",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "916c62b0",
    "metadata": {},
    "outputs": [],
@@ -411,6 +411,10 @@
     "\n",
     "# Here are some of the functions that we can use for lists in Python\n",
     "\n",
+    "\n",
+    "# Copying a list using copy() function\n",
+    "\n",
+    "\n",
     ">>> Names_keep = Names.copy()\n",
     ">>>> print(Names_keep)\n",
     "['Harivansh', 'Ladliju']\n",
@@ -456,7 +460,227 @@
     "... else:\n",
     "...         print(\"i do not have that\")\n",
     "... \n",
-    "Shri Radhe\n"
+    "Shri Radhe\n",
+    "\n",
+    "\n",
+    "# using .pop() function in list\n",
+    "\n",
+    ">>> Names\n",
+    "['Radhavallabh', 'Shyama', 'Kishori', 'Shriji', 'Ladliju', 'Radha']\n",
+    ">>> if \"Radha\" in Names:\n",
+    "...     print(Names.pop())\n",
+    "... else:\n",
+    "...         print(\"i do not have that\")\n",
+    "... \n",
+    "Radha\n",
+    "\n",
+    ">>> Names\n",
+    "['Radhavallabh', 'Shyama', 'Kishori', 'Shriji', 'Ladliju']\n",
+    "\n",
+    "\n",
+    "# using .remove() function in list to remove any element from the list\n",
+    "\n",
+    ">>> Names\n",
+    "['Radhavallabh', 'Shyama', 'Kishori', 'Shriji', 'Ladliju']\n",
+    ">>> if \"Radhavallabh\" in Names:\n",
+    "...     print(Names.remove(\"Radhavallabh\"))\n",
+    "... else:\n",
+    "...         print(\"i do not have that\")\n",
+    "... \n",
+    "None\n",
+    ">>> Names\n",
+    "['Shyama', 'Kishori', 'Shriji', 'Ladliju']\n",
+    "\n",
+    "# Using .insert() function in list to insert element at user defined place in the list\n",
+    "\n",
+    ">>> if \"Radhavallabh\" in Names:\n",
+    "...     print(Names.remove(\"Radhavallabh\"))\n",
+    "... else:\n",
+    "...         print(Names.insert(1, \"HitHarivansh\"))\n",
+    "... \n",
+    "None\n",
+    ">>> Names\n",
+    "['Shyama', 'HitHarivansh', 'Kishori', 'Shriji', 'Ladliju']\n",
+    "\n",
+    "# Now we will be seeing some examples to make list easier for number oriented study\n",
+    "\n",
+    "\n",
+    ">>> Square_Numbers = [ x ** 2 for x in range(10)]\n",
+    ">>> Square_Numbers\n",
+    "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n",
+    "\n",
+    "The working of range function is as follows:\n",
+    ">>> range(10)\n",
+    "range(0, 10)\n",
+    ">>> range(1, 10)\n",
+    "range(1, 10)\n",
+    "\n",
+    ">>> Square_Numbers = [ x for x in range(0, 10, 2)] With three parameters\n",
+    ">>> Square_Numbers\n",
+    "[0, 2, 4, 6, 8]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0aff4d2",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86ad3b67",
+   "metadata": {},
+   "source": [
+    "#                                                                           Dictionaries\n",
+    "\n",
+    "mydic = {\"Acharya\":\"Harivansh Mahaprabhu\", \"Upasana\":\"Jugal Prem\", \"Sampradaya\":\"Radhavallabhi\", \"Guru\":\"Premanand ji Maharaj\"}\n",
+    "> mydic\n",
+    "{'Acharya': 'Harivansh Mahaprabhu', 'Upasana': 'Jugal Prem', 'Sampradaya': 'Radhavallabhi', 'Guru': 'Premanand ji Maharaj'}\n",
+    "> mydic[\"Acharya\"]\n",
+    "'Harivansh Mahaprabhu'\n",
+    "> mydic[\"Acharya\"] = \"Shri Hit Sajni\"\n",
+    "> mydic\n",
+    "{'Acharya': 'Shri Hit Sajni', 'Upasana': 'Jugal Prem', 'Sampradaya': 'Radhavallabhi', 'Guru': 'Premanand ji Maharaj'}\n",
+    "\n",
+    "> for sadhana in mydic:\n",
+    "...     print(mydic)\n",
+    "... \n",
+    "{'Acharya': 'Shri Hit Sajni', 'Upasana': 'Jugal Prem', 'Sampradaya': 'Radhavallabhi', 'Guru': 'Premanand ji Maharaj'}\n",
+    "{'Acharya': 'Shri Hit Sajni', 'Upasana': 'Jugal Prem', 'Sampradaya': 'Radhavallabhi', 'Guru': 'Premanand ji Maharaj'}\n",
+    "{'Acharya': 'Shri Hit Sajni', 'Upasana': 'Jugal Prem', 'Sampradaya': 'Radhavallabhi', 'Guru': 'Premanand ji Maharaj'}\n",
+    "{'Acharya': 'Shri Hit Sajni', 'Upasana': 'Jugal Prem', 'Sampradaya': 'Radhavallabhi', 'Guru': 'Premanand ji Maharaj'}\n",
+    "> for sadhana in mydic:\n",
+    "...     print(sadhana)\n",
+    "... \n",
+    "Acharya\n",
+    "Upasana\n",
+    "Sampradaya\n",
+    "Guru\n",
+    "> for sadhana in mydic:\n",
+    "...     print(sadhana, mydic[sadhana])\n",
+    "... \n",
+    "Acharya Shri Hit Sajni\n",
+    "Upasana Jugal Prem\n",
+    "Sampradaya Radhavallabhi\n",
+    "Guru Premanand ji Maharaj\n",
+    "> for sadhana in mydic:\n",
+    "...     print(sadhana, mydic[sadhana], end = \"==>\")\n",
+    "... \n",
+    "Acharya Shri Hit Sajni==>Upasana Jugal Prem==>Sampradaya Radhavallabhi==>Guru Premanand ji Maharaj==>\n",
+    "\n",
+    "\n",
+    "> for key, value in mydic.items():\n",
+    "...     print(key, value)\n",
+    "... \n",
+    "Acharya Shri Hit Sajni\n",
+    "Upasana Jugal Prem\n",
+    "Sampradaya Radhavallabhi\n",
+    "Guru Premanand ji Maharaj\n",
+    "\n",
+    "> for question, answer in mydic.items():\n",
+    "...     print(question, answer)\n",
+    "... \n",
+    "Acharya Shri Hit Sajni\n",
+    "Upasana Jugal Prem\n",
+    "Sampradaya Radhavallabhi\n",
+    "Guru Premanand ji Maharaj\n",
+    "> for question, answer in mydic.items():\n",
+    "...     print(answer, question)\n",
+    "... \n",
+    "Shri Hit Sajni Acharya\n",
+    "Jugal Prem Upasana\n",
+    "Radhavallabhi Sampradaya\n",
+    "Premanand ji Maharaj Guru\n",
+    "> if \"Radhavallabhi\" in mydic:\n",
+    "...     print(\"Shri radha\")\n",
+    "... \n",
+    "> if \"Sampradaya\" in mydic:\n",
+    "...     print(\"Shri radha\")\n",
+    "... \n",
+    "Shri radha\n",
+    "\n",
+    "\n",
+    " # Hence we can say that we can only use key as serachable elment in the dictionary\n",
+    " # Here's how to add items in a dictionary\n",
+    "\n",
+    "\n",
+    "\n",
+    "> mydic[\"Place\"] = \"Vrindavan\"\n",
+    "> mydic\n",
+    "{'Acharya': 'Shri Hit Sajni', 'Upasana': 'Jugal Prem', 'Sampradaya': 'Radhavallabhi', 'Guru': 'Premanand ji Maharaj', 'Place': 'Vrindavan'}\n",
+    "\n",
+    " # mydic.pop(\"\") this can be used same asin list it just retun with value of the passed key when runned \n",
+    "\n",
+    "SyntaxError: source code string cannot contain null bytes (<python-input-21>)\n",
+    "> mydic[2, \"Places\"] = \"Vrindavani\"\n",
+    "> mydic\n",
+    "{'Acharya': 'Shri Hit Sajni', 'Upasana': 'Jugal Prem', 'Sampradaya': 'Radhavallabhi', 'Guru': 'Premanand ji Maharaj', 'Place': 'Vrindavan', (2, 'Places'): 'Vrindavani'}\n",
+    "> mydic.popitem()\n",
+    "((2, 'Places'), 'Vrindavani')\n",
+    "> mydic.popitem()\n",
+    "('Place', 'Vrindavan')\n",
+    "> mydic\n",
+    "{'Acharya': 'Shri Hit Sajni', 'Upasana': 'Jugal Prem', 'Sampradaya': 'Radhavallabhi', 'Guru': 'Premanand ji Maharaj'}\n",
+    "> print(mydic)\n",
+    "{'Acharya': 'Shri Hit Sajni', 'Upasana': 'Jugal Prem', 'Sampradaya': 'Radhavallabhi', 'Guru': 'Premanand ji Maharaj'}\n",
+    "\n",
+    "> # Now we try to construct a dictionary with the help of list and strings\n",
+    "\n",
+    "> Key_value = [1, 2, 3, 4, 5]\n",
+    "> Value_say = [\"vrindavan\", \"vrindavan\"]\n",
+    "> new_dictconstruct = dict.fromkeys(Key_value, Value_say)\n",
+    "> new_dictconstruct\n",
+    "{1: ['vrindavan', 'vrindavan'], 2: ['vrindavan', 'vrindavan'], 3: ['vrindavan', 'vrindavan'], 4: ['vrindavan', 'vrindavan'], 5: ['vrindavan', 'vrindavan']}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d0bca17",
+   "metadata": {},
+   "source": [
+    "#                                                                               Tuples\n",
+    "\n",
+    ">>> tuple = (\"Radha\", \"Ladliju\", \"Shayama\")\n",
+    ">>> tuple[1:]\n",
+    "('Ladliju', 'Shayama')\n",
+    ">>> tuple[1] = \"Shyam\"\n",
+    "\n",
+    "# TypeError: 'tuple' object does not support item assignment\n",
+    "# above is the reason why tuples are introduced even if lists were there\n",
+    "\n",
+    ">>> len(tuple)\n",
+    "3\n",
+    ">>> tupler = (\"Lalju\", \"Shyam\", \"krishna\")\n",
+    ">>> tuple + tupler\n",
+    "('Radha', 'Ladliju', 'Shayama', 'Lalju', 'Shyam', 'krishna')\n",
+    ">>> Shyama_shyam = tuple + tupler\n",
+    ">>> Shyama_shyam \n",
+    "('Radha', 'Ladliju', 'Shayama', 'Lalju', 'Shyam', 'krishna')\n",
+    ">>> Shyama_shyam.count(\"Lalju\")\n",
+    "1\n",
+    "\n",
+    "\n",
+    ">>> # All things/functions are almost same as list and dictionary  \n",
+    "\n",
+    "\n",
+    "\n",
+    ">>> # We can Wrap a tuple in a tuple\n",
+    ">>> (name, naam, 1, 2, 3, 4) = Shyama_shyam\n",
+    "  File \"<python-input-17>\", line 1\n",
+    "    (name, naam, 1, 2, 3, 4) = Shyama_shyam\n",
+    "                 ^\n",
+    "SyntaxError: cannot assign to literal\n",
+    ">>> (name, naam, Roll, phone, address, city) = Shyama_shyam\n",
+    ">>> name\n",
+    "'Radha'\n",
+    ">>> naam\n",
+    "'Ladliju'\n",
+    ">>> Roll\n",
+    "'Shayama'\n",
+    ">>> type(Shyama_shyam)\n",
+    "<class 'tuple'>\n",
+    ">>> # There can be nested tuple."
    ]
   }
  ],
