Day 4 python till evening

--- a/basics.ipynb
+++ b/basics.ipynb
@@ -510,6 +510,14 @@
    "source": [
     "#                                                                           Dictionaries\n",
     "\n",
+    "# .get() function is used to get the value of the key passed in the function\n",
+    "# .keys() function is used to get the keys of the dictionary\n",
+    "# .values() function is used to get the values of the dictionary\n",
+    "# .items() function is used to get the key-value pair of the dictionary\n",
+    "# .popitem() function is used to remove the last key-value pair from the dictionary\n",
+    "# .pop() function is used to remove the key-value pair from the dictionary\n",
+    "# .clear() function is used to remove all the key-value pair from the dictionary\n",
+    "\n",
     "mydic = {\"Acharya\":\"Harivansh Mahaprabhu\", \"Upasana\":\"Jugal Prem\", \"Sampradaya\":\"Radhavallabhi\", \"Guru\":\"Premanand ji Maharaj\"}\n",
     "> mydic\n",
     "{'Acharya': 'Harivansh Mahaprabhu', 'Upasana': 'Jugal Prem', 'Sampradaya': 'Radhavallabhi', 'Guru': 'Premanand ji Maharaj'}\n",
