--- a/conditionals.ipynb
+++ b/conditionals.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "bf8ca8eb",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$10\n"
+      "$8\n"
      ]
     }
    ],
@@ -156,26 +156,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "id": "3fcb4769",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Anna', 'dog', 'egg', 'hi']\n"
+     "ename": "IndexError",
+     "evalue": "string index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      3\u001b[39m new_words = [word \u001b[38;5;28;01mfor\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m words \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(word)>=\u001b[32m3\u001b[39m]\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m vowel \u001b[38;5;129;01min\u001b[39;00m new_words:\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m vowel[\u001b[32m0\u001b[39m] == \u001b[43mvowel\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mvowel\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m:\n\u001b[32m      6\u001b[39m         selected = vowel\n\u001b[32m      7\u001b[39m         new_words.remove(selected)\n",
+      "\u001b[31mIndexError\u001b[39m: string index out of range"
      ]
     }
    ],
    "source": [
     "#You have a list of strings. Remove any string that: is shorter than 3 characters, or starts and ends with the same letter (case-insensitive), andcontains a vowel.\n",
     "words = [\"Anna\", \"dog\", \"egg\", \"hi\", \"Oo\"]\n",
-    "for word in words:\n",
-    "    if len(word) < 3:\n",
-    "         words.pop()\n",
-    "print(words)\n",
+    "new_words = [word for word in words if len(word)>=3]\n",
+    "for vowel in new_words:\n",
+    "    if vowel[0] == vowel[len(vowel)]:\n",
+    "        selected = vowel\n",
+    "        new_words.remove(selected)\n",
+    "\n",
+    "print(new_words)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec038ab1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#leap year check\n",
+    "Year = 2024\n",
+    "if Year/4 == 0 and Year/100 == 0 and Year/400 == 0:\n",
+    "    print(\"year\", Year, \"is a leap year\")\n",
+    "else:\n",
+    "    print(\"not a leap year\") "
    ]
   }
  ],
