Day 5 of learning udemy python

--- a/udemy python/1_basics/basics.ipynb
+++ b/udemy python/1_basics/basics.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "f606737d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "console.log(\"hello\")\n"
+     ]
+    }
+   ],
    "source": [
     "print('hello')\n",
     "print('console.log(\"hello\")')"
@@ -13,10 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "926c3986",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "def chai(n):\n",
     "    print(n)\n",
@@ -25,7 +42,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "id": "e2ef15ee",
    "metadata": {},
    "source": [
@@ -46,6 +63,12 @@
   {
    "cell_type": "markdown",
    "id": "82661f5a",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "raw",
+   "id": "61bfc7f1",
    "metadata": {},
    "source": [
     "# Object Types / Data Types\n",
@@ -68,9 +91,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "id": "a2822b43",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "### Interning in Python\n",
     "\n",
@@ -81,30 +108,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "916c62b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HooAigan H n Hoo\n"
+     ]
+    }
+   ],
    "source": [
     "# String indexing and slicing\n",
     "username = \"Hoonigan\"\n",
     "\n",
     "len(username)       # Get length\n",
-    "username[0]         # First character\n",
-    "username[-1]        # Last character\n",
-    "username[0:3]       # Slicing from index 0 to 2\n",
+    "a = username[0]         # First character\n",
+    "b = username[-1]        # Last character\n",
+    "c = username[0:3]       # Slicing from index 0 to 2\n",
     "\n",
     "# Strings are immutable\n",
     "# username[0] = 'A'  # ❌ This would raise an error\n",
     "\n",
     "# To change the first character:\n",
-    "username = 'A' + username[1:]\n"
+    "#username = 'A' + username[1:]\n",
+    "username = username[0:3] + 'A' + username[4:]\n",
+    "print(username, a, b, c)\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "id": "5053c2dc",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "### Mutable Behavior with Lists\n",
     "\n",
@@ -115,12 +156,12 @@
     "mylist[0] = 54\n",
     "print(mylisttwo)  # [54, 3, 4, 5]\n",
     "\n",
-    "mylist = [57, 3, 4, 5]\n",
-    "print(mylisttwo)  # [54, 3, 4, 5]\n"
+    "mylist = [57, 3, 4, 5] # it created a new list instead of modifying the old one\n",
+    "print(mylisttwo)  # [54, 3, 4, 5] but mylisttwo is still pointing to the old list\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "id": "004df7b8",
    "metadata": {},
    "source": [
@@ -137,7 +178,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "id": "5a860206",
    "metadata": {},
    "source": [
@@ -152,7 +193,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "id": "0bbbd6fa",
    "metadata": {},
    "source": [
@@ -177,7 +218,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "id": "a7f2344d",
    "metadata": {},
    "source": [
@@ -191,7 +232,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "id": "07d9a0e2",
    "metadata": {},
    "source": [
@@ -229,7 +270,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "id": "8cee7b6d",
    "metadata": {},
    "source": [
@@ -247,7 +288,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "id": "783e814a",
    "metadata": {},
    "source": [
@@ -286,9 +327,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "id": "7c01f980",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "Some Slicing examples:\n",
     ">>> lis = [0, 1, 2, 3, 4]\n",
@@ -305,7 +350,8 @@
     ">>> lis[-2:-1]\n",
     "[3]\n",
     ">>> lis[-2:-3]\n",
-    "[]\n",
+    "[]not be an answer \n",
+    ">>> from decimal import Decimal\n",
     ">>> lis[-2:-4]\n",
     "[]\n",
     ">>> lis[-1:-4]\n",
@@ -665,7 +711,32 @@
     "'Shayama'\n",
     ">>> type(Shyama_shyam)\n",
     "<class 'tuple'>\n",
-    ">>> # There can be nested tuple."
+    ">>> # There can be nested tuple.\n",
+    "\n",
+    "\n",
+    "#                       MEMBERSHIP TESTING\n",
+    ">>> Names = (\"Radha\", \"Shyama\", \"Kishori\", \"Shri radha\")\n",
+    ">>> \"Radha\" in Names\n",
+    "True\n",
+    ">>> \"Ladliju\" in Names\n",
+    "False\n",
+    "\n",
+    "\n",
+    "#  Ratios assignment\n",
+    "Names = (\"Radha\", \"Shyama\", \"Kishori\", \"Shri radha\")\n",
+    "radha_ratio, Shyama_ratio = 1, 2\n",
+    "print(f\"Radha's ratio is {radha_ratio} and Shyama's ratio is {Shyama_ratio}\")\n",
+    "\n",
+    "\n",
+    "#            Swapping values\n",
+    "min_temp = 40\n",
+    "max_temp = 25\n",
+    "\n",
+    "temp = (min_temp, max_temp)\n",
+    "min_temp, max_temp = 25, 40\n",
+    "\n",
+    "print(min_temp)\n",
+    "print(max_temp)"
    ]
   }
  ],
