--- a/udemy python/1_basics/conditionals.ipynb
+++ b/udemy python/1_basics/conditionals.ipynb
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$8\n"
+      "$12\n"
      ]
     }
    ],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "5e3771d9",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 22, 17, 313, 14, 42, 24, 48]\n"
+      "[4, 8, 12, 16, 44, 28, 84, 48, 96]\n"
      ]
     }
    ],
@@ -111,8 +111,9 @@
     "    else:\n",
     "        even_num += 1\n",
     "    \n",
-    "if odd_num > even_num:\n",
+    "if odd_num < even_num:\n",
     "    num = [n for n in num if n%2 == 0] # it's like a loop and conditional inside the list\n",
+    "    # in above n in start means after the for loop, n is the number that passed the test \n",
     "    print(num)\n",
     "else:\n",
     "    print(num)\n",
@@ -156,28 +157,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "3fcb4769",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "string index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      3\u001b[39m new_words = [word \u001b[38;5;28;01mfor\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m words \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(word)>=\u001b[32m3\u001b[39m]\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m vowel \u001b[38;5;129;01min\u001b[39;00m new_words:\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m vowel[\u001b[32m0\u001b[39m] == \u001b[43mvowel\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mvowel\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m:\n\u001b[32m      6\u001b[39m         selected = vowel\n\u001b[32m      7\u001b[39m         new_words.remove(selected)\n",
-      "\u001b[31mIndexError\u001b[39m: string index out of range"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['dog', 'egg']\n"
      ]
     }
    ],
    "source": [
     "#You have a list of strings. Remove any string that: is shorter than 3 characters, or starts and ends with the same letter (case-insensitive), andcontains a vowel.\n",
     "words = [\"Anna\", \"dog\", \"egg\", \"hi\", \"Oo\"]\n",
-    "new_words = [word for word in words if len(word)>=3]\n",
+    "new_words = [n for n in words if len(n)>=3]\n",
     "for vowel in new_words:\n",
-    "    if vowel[0] == vowel[len(vowel)]:\n",
+    "    if vowel[0].lower() == vowel[len(vowel)-1].lower():\n",
     "        selected = vowel\n",
     "        new_words.remove(selected)\n",
     "\n",
