--- a/udemy python/1_basics/loops.ipynb
+++ b/udemy python/1_basics/loops.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ba396399",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6f2d6546",
    "metadata": {},
    "outputs": [
@@ -49,32 +49,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3e689452",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 6, 9, 12, 18, 21, 24, 27, 30]\n"
+     ]
+    }
+   ],
    "source": [
     "# multiplication table but skip 5th iteration\n",
-    "number = 3\n",
-    "Multiplication_table = [number * n \n",
-    "                        for n in range(1,11)\n",
-    "                          if n != 5 \n",
-    "                         ]\n",
+    "#number = 3\n",
+    "#Multiplication_table = [number * n for n in range(1,11) if n != 5 ]\n",
+    "Multiplication_table = [3 * n for n in range(1,11) if n != 5 ]\n",
     "print(Multiplication_table)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "97f33b70",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, -2, 3, -4, 5, 6, -7, -8, 9, 10]\n"
+     ]
+    }
+   ],
    "source": [
     "numbers = [1, -2, 3, -4, 5, 6, -7, -8, 9, 10]\n",
     "for num in numbers:\n",
-    "    if numbers != 5:\n",
+    "    if num != 5:\n",
     "        continue\n",
-    "        print(\"continue\")\n",
+    "        print(num)\n",
     "print(numbers)\n"
    ]
   },
@@ -110,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f128f458",
    "metadata": {},
    "outputs": [
@@ -137,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "ecafa83b",
    "metadata": {},
    "outputs": [
@@ -162,15 +176,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "b9dc3d72",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You are good to go!\n"
+     "ename": "NameError",
+     "evalue": "name 'user' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     user_input = \u001b[38;5;28mint\u001b[39m(\u001b[43muser\u001b[49m)\n\u001b[32m      3\u001b[39m     user = \u001b[38;5;28minput\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mEnter a number (1-10): \u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      4\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[32m1\u001b[39m <= user_input <= \u001b[32m10\u001b[39m:\n",
+      "\u001b[31mNameError\u001b[39m: name 'user' is not defined"
      ]
     }
    ],
@@ -263,6 +281,25 @@
     "I = iter(list_one)\n",
     "I -> this will give the starting memory refrence from where continous memory will be allocated\n",
     "next(I)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45cf46e1",
+   "metadata": {},
+   "source": [
+    "### Mutable Behavior with Lists\n",
+    "\n",
+    "```python\n",
+    "mylist = [2, 3, 4, 5]\n",
+    "mylisttwo = mylist\n",
+    "\n",
+    "mylist[0] = 54\n",
+    "print(mylisttwo)  # [54, 3, 4, 5]\n",
+    "\n",
+    "mylist = [57, 3, 4, 5]\n",
+    "mylist[0] \n",
+    "print(mylisttwo)  # [54, 3, 4, 5]\n"
    ]
   },
   {
